# EasyTeleop-Node

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WebSocketRPC.py  docker-compose.yml  node.py  pyproject.toml
docs/: README.md  api.md  database.md  framework.md  json-rpc.md  mqtt.md
server/: MQTTStatusSync.py  backend.py  run_mqtt_sync.py
server/static/: index.html  style.css
server/static/js/: main.js
server/static/js/components/: Dashboard.js  DeviceManager.js  Navigation.js  TeleopManager.js
