[project]
name = "EasyTeleop-Node"
version = "0.1.0"
description = "Node/server runner for EasyTeleop"
readme = "README.md"
requires-python = ">=3.10,<=3.11"
authors = [
  { name = "Chain Pray", email = "qianpurui@gmail.com" },
]
dependencies = [
  # 核心：依赖库仓
  "easyteleop @ git+https://github.com/SZUEAILab/EasyTeleop.git@dev",
  "websockets>=15.0.1",
  "paho-mqtt>=2.1.0",
  "requests>=2.32.5",
  "python-dotenv>=1.0.1",
  
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
py-modules = ["node", "WebSocketRPC"]
